--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Home</title>
-	</head>
+    <title>Homepage</title>
+<head>  
+<link rel="stylesheet" href="crafts.css">
+  
+    </head>   
+<body>
+     <header></header>
+      
+<div class="menubar">
+    
+    <a href="">Text</a>
+    <a href="">Text</a>
+    <a href="">Text</a>
+    <a href="">Text</a>
+    <a href="">Text</a>
+    <input type="text" placeholder="Search..">
+</div>
+
+<div class="sidebar">
+    <img src="" height="150px" width="150px" align= centre>
+    <a> </a>
+    <a href="">View Profile</a>
+    <a href="">Text</a>
+    <a href="">Text</a>
+</div>
+    
+    
+    
+    </body>
 </html>
