--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
 <html>
-    <title>Homepage</title>
+    
 <head>  
-<link rel="stylesheet" href="crafts.css">
+    <title>Homepage</title>
+
+    <link rel="stylesheet" href="crafts.css">
   
     </head>   
 <body>
      <header></header>
-      
+     
 <div class="menubar">
     
     <a href="">Text</a>
@@ -20,13 +22,10 @@
 </div>
 
 <div class="sidebar">
+    <img src="" height="150px" width="150px" align= centre>
     <a> </a>
     <a href="">View Profile</a>
     <a href="">Text</a>
     <a href="">Text</a>
 </div>
     
-    
-    
-    </body>
-</html>
