--- a/templates/crafts/login.html
+++ b/templates/crafts/login.html
@@ -10,7 +10,7 @@
    
     
   <existinguser>
-    <form class="log_in" action="Login.php" method="get" name="log_in">
+    <form class="log_in" action="" method="get" name="log_in">
         
         <label for='username'>Username:</label>
         <input id="username" type="text" name="username" value="" />
@@ -29,7 +29,7 @@
     <br>
     <br>
     <signup>
-    <form class="signup" action="Signup.php" method="get" name="signup">
+    <form class="signup" action="" method="get" name="signup">
         <ul style="list-style: none;">
         <li>
         <label  for='username'>Username:</label>
