--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -24,10 +25,14 @@
 <div class="sidebar">
     
     <a> </a>
-    <a href="">View Profile</a>
-    <a href="">Text</a>
+    <a href="mypage.html">View Profile</a>
+    <a href="messages.html">Messages</a>
     <a href="">Text</a>
 </div>
 
-     </body>
+<div class="main">
+
+
+</div>
+ </body>
 </html>
