--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
+{% load static%}
 
 <html>
     
 <head>  
     <title>Homepage</title>
 
-    <link rel="stylesheet" href="crafts.css">
+    <link rel="stylesheet" href="{% static 'crafts.css'%}">
   
     </head>   
 <body>
