--- a/templates/crafts/messages.html
+++ b/templates/crafts/messages.html
@@ -1,13 +1,9 @@
-
-<!DOCTYPE html>
-{% load static%}
-
 <html>
     
 <head>  
-    <title>Homepage</title>
+    <title>Messages</title>
 
-    <link rel="stylesheet" href="{% static 'crafts.css'%}">
+    <link rel="stylesheet" href="crafts.css">
   
     </head>   
 <body>
@@ -15,7 +11,7 @@
      
 <div class="menubar">
     
-    <a href="login">Login</a>
+    <a href="">Text</a>
     <a href="">Text</a>
     <a href="">Text</a>
     <a href="">Text</a>
@@ -28,7 +24,7 @@
     <a> </a>
     <a href="mypage.html">View Profile</a>
     <a href="messages.html">Messages</a>
-    <a href="">Text</a>
+    <a href="home.html">Home</a>
 </div>
 
 <div class="main">
