--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -15,7 +15,7 @@
      
 <div class="menubar">
     
-    <a href="">Text</a>
+    <a href="login">Login</a>
     <a href="">Text</a>
     <a href="">Text</a>
     <a href="">Text</a>
