--- a/templates/crafts/userhome.html
+++ b/templates/crafts/userhome.html
@@ -1,36 +1,42 @@
+<!DOCTYPE html>
+
 <html>
     
 <head>  
-    <title>Messages</title>
+    <title>My Home</title>
     {%load static%}
 
     <link rel="stylesheet" href="{% static 'crafts.css'%}">
   
+  
     </head>   
 <body>
      <header></header>
-     
+      
 <div class="menubar">
     
-    <a href="login">Login</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
+    <a href="">Main feed</a>
+    <a href="">Likes</a>
+    <a href=""></a>
     <a href="">Text</a>
     <a href="">Text</a>
     <input type="text" placeholder="Search..">
 </div>
 
 <div class="sidebar">
-    
+    <img src="" height="150px" width="150px" align= centre>
     <a> </a>
     <a href="mypage.html">View Profile</a>
-    <a href="home.html">Home</a>
-    <a href="">Sign out</a>
+    <a href="messages.html">Messages</a>
+    <a href="">Log out</a>
 </div>
 
 <div class="main">
 
 
-</div>
- </body>
+    </div>
+    
+    
+    
+    </body>
 </html>
