--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -16,20 +16,12 @@
      
 <div class="menubar">
     
-    <a href="login">Login</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Create an Account</a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
     <input type="text" placeholder="Search..">
-</div>
-
-<div class="sidebar">
-    
-    <a> </a>
-    <a href="mypage.html">View Profile</a>
-    <a href="messages.html">Messages</a>
-    <a href="">Text</a>
 </div>
 
 <div class="main">
