--- a/templates/crafts/login.html
+++ b/templates/crafts/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Log in or Sign up!</title>
+    <title>Log in</title>
         {%load static%}
 
     <link rel="stylesheet" href="{% static 'crafts.css'%}">
@@ -27,30 +27,6 @@
         </form>
    </existinguser> 
     
-    
-    <br>
-    <br>
-    <br>
-    <br>
-    <signup>
-    <form class="signup" action="" method="get" name="signup">
-        <ul style="list-style: none;">
-        <li>
-        <label  for='username'>Username:</label>
-        <input id="username" type="text" name="username" value="" />
-         </li>
-        <li>
-        <label for='password'>Password:</label>
-        <input id="password" type="text" name="password" value="" />
-        </li>
-        <li>
-        <label for='email'>Email:</label>
-        <input id="email" type="email" name="email" value="" /> 
-        </li>
-        <br>
-        <button class="submit" type="submit" >Sign Up!</button>
-        </ul>
-    </form>
-   </signup>
+   
    </body> 
     
