--- a/templates/crafts/messages.html
+++ b/templates/crafts/messages.html
@@ -12,11 +12,11 @@
      
 <div class="menubar">
     
-    <a href="login">Login</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
-    <a href="">Text</a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
     <input type="text" placeholder="Search..">
 </div>
 
@@ -24,8 +24,8 @@
     
     <a> </a>
     <a href="mypage.html">View Profile</a>
-    <a href="home.html">Home</a>
-    <a href="">Sign out</a>
+    <a href="userhome.html">Home</a>
+    <a href="">Log out</a>
 </div>
 
 <div class="main">
