added views and forms that allow a user to sign up for a profile

--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -16,8 +16,8 @@
      
 <div class="menubar">
     
-    <a href="login.html">Login</a>
-    <a href="signup.html">Create an Account</a>
+    <a href="login">Login</a>
+    <a href="signup">Create an Account</a>
     <a href=""></a>
     <a href=""></a>
     <a href=""></a>
