--- a/templates/crafts/messages.html
+++ b/templates/crafts/messages.html
@@ -23,8 +23,8 @@
 <div class="sidebar">
     
     <a> </a>
-    <a href="mypage.html">View Profile</a>
-    <a href="userhome.html">Home</a>
+    <a href="mypage">View Profile</a>
+    <a href="userhome">Home</a>
     <a href="">Log out</a>
 </div>
 
