--- a/templates/crafts/mypage.html
+++ b/templates/crafts/mypage.html
@@ -26,8 +26,8 @@
 <div class="sidebar">
     <img src="" height="150px" width="150px" align= centre>
     <a> </a>
-    <a href="userhome.html">My Home</a>
-    <a href="messages.html">Messages</a>
+    <a href="userhome">My Home</a>
+    <a href="messages">Messages</a>
     <a href="">Log out</a>
 </div>
 
