--- a/templates/crafts/userhome.html
+++ b/templates/crafts/userhome.html
@@ -24,10 +24,10 @@
 </div>
 
 <div class="sidebar">
-    <img src="" height="150px" width="150px" align= centre>
+    
     <a> </a>
-    <a href="mypage.html">View Profile</a>
-    <a href="messages.html">Messages</a>
+    <a href="mypage">View Profile</a>
+    <a href="messages">Messages</a>
     <a href="">Log out</a>
 </div>
 
