updated html files

--- a/templates/crafts/home.html
+++ b/templates/crafts/home.html
@@ -6,7 +6,7 @@
     
 <head>  
     <title>Homepage</title>
-    {%load static%}
+    {%load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
