--- a/templates/crafts/messages.html
+++ b/templates/crafts/messages.html
@@ -2,7 +2,7 @@
     
 <head>  
     <title>Messages</title>
-    {%load static%}
+    {%load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
