--- a/templates/crafts/login.html
+++ b/templates/crafts/login.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Log in</title>
-      {%load static%}
+      {%load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
  
