--- a/templates/crafts/mypage.html
+++ b/templates/crafts/mypage.html
@@ -4,8 +4,7 @@
     
 <head>  
     <title>My Profile</title>
-    {%load static%}
-
+    {%load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
   
