--- a/templates/crafts/signup.html
+++ b/templates/crafts/signup.html
@@ -5,7 +5,7 @@
     
 <head>  
     <title>Create an account</title>
-    {%load static%}
+    {%load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
