--- a/templates/crafts/userhome.html
+++ b/templates/crafts/userhome.html
@@ -4,7 +4,7 @@
     
 <head>  
     <title>My Home</title>
-    {%load static%}
+   {%load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
