updated html files

--- a/templates/crafts/signup.html
+++ b/templates/crafts/signup.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'crafts/crafts.css'%}">
   
     </head>
-    <body>
+<body>
+    <header> Create an account for Crafts</header>
 
 
  <signup>
