finished 'make post' form

--- a/templates/crafts/login.html
+++ b/templates/crafts/login.html
@@ -9,7 +9,10 @@
     </head>   
 <body>
      <header> Log in </header>
+		<div class="menubar">
     
+    <a href="../home">Home</a>
+</div>
    
     
   <existinguser>
