--- a/templates/crafts/mypage.html
+++ b/templates/crafts/mypage.html
@@ -14,9 +14,9 @@
       
 <div class="menubar">
     
+	<a href="../home">Home</a>
     <a href="">Main feed</a>
     <a href="">Likes</a>
-    <a href=""></a>
     <a href="">Text</a>
     <a href="">Text</a>
     <input type="text" placeholder="Search..">
