--- a/templates/crafts/signup.html
+++ b/templates/crafts/signup.html
@@ -11,7 +11,10 @@
   
     </head>
     <body>
-
+	<div class="menubar">
+    
+    <a href="../home">Home</a>
+	</div>
 
  <signup>
     <form class="signup" action="" method="get" name="signup">
