--- a/templates/crafts/messages.html
+++ b/templates/crafts/messages.html
@@ -12,7 +12,7 @@
      
 <div class="menubar">
     
-    <a href="../">Home</a>
+    <a href="../">Homes</a>
     <a href=""></a>
     <a href=""></a>
     <a href=""></a>
